# harolds_journey

./: README.md  pyproject.toml  setup.py  sound_credits.md
Harold's Journey/: __main__.py  controls.py  obstacle.py  pickup.py  player.py  pythongame.py
Harold's Journey/graphics/slime/slime/: ReadME.txt
Python Game/: pythongame.py
harolds_journey/: __main__.py  buff.py  controls.py  display_names.csv  global_vars.py  harold.py  intro.py  menu.py  obstacle.py  pickup.py  player.py  projectile.py  pygame_constants.csv  strings_constants_dict.py  tempCodeRunnerFile.py
harolds_journey/graphics/enemies/bird/: bird_animation_holder.py
harolds_journey/graphics/enemies/skeleton/: skeleton_animation_holder.py
harolds_journey/graphics/fireball/: fireball_animation_holder.py
harolds_journey/graphics/harold/: harold_animation_holder.py
harolds_journey/graphics/health_bar/: health_bar.py  health_bar_animation_holder.py  outline_health_bar.py
harolds_journey/graphics/slime/slime/: ReadME.txt
harolds_journey/graphics/wizard/: wizard_animation_holder.py
harolds_journey/graphics/wizard/wizard_death_animation/: wizard_death_arr.py
harolds_journey/saved_files/controls/: default_controls.yaml  edited_controls.yaml
harolds_journey/saved_files/options/: default_options.yaml  edited_options.yaml
harolds_journey/saved_files/statistics/: default_statistics.yaml  edited_statistics.yaml
