[project]
name = "harolds_journey"
version = "2024.09.07"
requires-python = ">=3.11"
authors = [
  {name = "Ryan Tunkel"},
]
description = "A Snail's Journey"
readme = "README.md"
license = {file = "LICENSE.txt"}
classifiers = [
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/ryanetunkel/harolds_journey"
Documentation = "https://github.com/ryanetunkel/harolds_journey/blob/main/README.md"
Repository = "https://github.com/ryanetunkel/harolds_journey"
"Bug Tracker" = "https://github.com/ryanetunkel/harolds_journey"
Changelog = "https://github.com/ryanetunkel/harolds_journey"
